--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
+    "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.3.0",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.1.7",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
